<resources>
    <string name="app_name">HW1</string>
    <string name="arrow_left_description">Left arrow</string>
    <string name="arrow_right_description">right arrow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">start</string>
    <string name="move">move</string>
    <string name="speed">speed</string>
    <string name="slow">Slow</string>
    <string name="fast">Fast</string>
    <string name="buttons">Buttons</string>
    <string name="without_buttons">Without</string>
    <string name="place">Place</string>
    <string name="score">Score</string>
    <string name="date">Date</string>
    <string name="starting_score">000</string>
    <string name="high_scores">High Scores</string>
    <string name="play_again">Play Again</string>
    <string name="game_over_you_lost">Game Over! You lost</string>
    <string name="back_to_the_beginning">Back to the beginning</string>
    <string name="_1">1</string>
    <string name="_100">100</string>
    <string name="_01_01_2024">01/01/2024</string>
</resources>
