<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/score_item_place"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/_1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/score_item_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/_100" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/score_item_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/_01_01_2024" />

</LinearLayout>