<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/third_screen_padding"
    android:background="@color/lightBlue">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/game_over_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over_you_lost"
        android:textSize="@dimen/game_over_text_size"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">


    <com.google.android.material.button.MaterialButton
            android:id="@+id/replay_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_again"
            android:textSize="@dimen/replay_button_text_size"
            android:layout_marginBottom="@dimen/game_over_text_margin"
            android:textColor="@android:color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/high_scores_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_scores"
            android:textSize="@dimen/high_scores_button_text_size"
            android:textColor="@android:color/white" />
    </LinearLayout>

</FrameLayout >