<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/penguin_background">

    <LinearLayout
        android:id="@+id/center_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_button"
        android:layout_above="@id/button"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        android:background="@color/gray">

        <LinearLayout
            android:id="@+id/switch_container_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slow"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginEnd="12dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/speed_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:showText="false" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fast"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginStart="12dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <LinearLayout
            android:id="@+id/switch_button_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/without_buttons"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginEnd="12dp" />


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/move_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttons"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginStart="12dp" />

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_button"
        android:backgroundTint="@color/lightBlue"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:text="@string/start"
        />
</RelativeLayout>