<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/mainScoreTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/starting_score"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/text_margin_start"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/mainImgHeart0"
                android:layout_width="@dimen/heart_dimens"
                android:layout_height="@dimen/heart_dimens"
                android:layout_marginEnd="@dimen/heart_margin"
                app:srcCompat="@drawable/heart"
             />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/mainImgHeart1"
                android:layout_width="@dimen/heart_dimens"
                android:layout_height="@dimen/heart_dimens"
                android:layout_marginStart="@dimen/heart_margin"
                android:layout_marginEnd="@dimen/heart_margin"
                app:srcCompat="@drawable/heart"
             />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/mainImgHeart2"
                android:layout_width="@dimen/heart_dimens"
                android:layout_height="@dimen/heart_dimens"
                android:layout_marginStart="@dimen/heart_margin"
                android:visibility="visible"

                app:srcCompat="@drawable/heart"
             />
        </LinearLayout>
    </LinearLayout>

    <GridLayout
        android:id="@+id/game_board"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="8"
        android:columnCount="5"
        android:rowCount="9">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/ice" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/penguin" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/penguin" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/penguin" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/penguin" />


        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/penguin" />

    </GridLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/marginBottom">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/mainFabLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:icon="@drawable/arrow"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            app:srcCompat="@drawable/arrow"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_down_margin"
            android:rotationY="180"
            android:backgroundTint="@color/button_color"
            android:contentDescription="@string/arrow_left_description"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/mainFabRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:icon="@drawable/arrow"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/arrow"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_down_margin"
            android:backgroundTint="@color/button_color"
            android:contentDescription="@string/arrow_right_description"
            />
    </RelativeLayout>

</FrameLayout>
